--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="David">
+    <meta name="description" content="Une page spéciale pour célébrer l'anniversaire de Nadège">
+    <meta name="keywords" content="anniversaire, Nadège, célébration, messages, photos, vidéos, souvenirs">
+    <meta property="og:title" content="Joyeux Anniversaire Nadège !" />
+    <meta property="og:description" content="Une page spéciale pour célébrer l'anniversaire de Nadège avec des messages, photos et vidéos." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://github.com/davekg8/cadeau-nado/blob/main/og_image.png?raw=true" />
     <title>Joyeux Anniversaire Nadège !</title>
     <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/616/616490.png" />
     <!-- Tailwind CSS CDN -->
@@ -553,4 +560,5 @@
         });
     </script>
 </body>
+</html>
 </html>
