--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             if (giftClickCount === 1) {
                 agentMessage.innerHTML = "Désolé bibou mais il n'y a pas de cadeau.";
             } else if (giftClickCount >= 2) {
-                agentMessage.innerHTML = "Ok il y a un cadeau et ce cadeau c'est moi. <span id='inlineHeart' class='text-red-500 text-2xl cursor-pointer animate-pulse'>&hearts;</span>";
+                agentMessage.innerHTML = "Il n'y a certes pas de cadeau physique (un jour peut être). Mais au moins je suis là pour toi si besoin y est ( le tarif est de 200dh/h). <span id='inlineHeart' class='text-red-500 text-2xl cursor-pointer animate-pulse'>&hearts;</span>";
                 giftButton.style.display = 'none'; // Hide the button after the final message
                 
                 // Add event listener to the newly created heart
