--- a/index.html
+++ b/index.html
@@ -447,9 +447,9 @@
             giftClickCount++;
             agentConversation.classList.remove('hidden');
 
-            if (giftClickCount === 1) {
+            if (giftClickCount < 5) {
                 agentMessage.innerHTML = "Désolé bibou mais il n'y a pas de cadeau.";
-            } else if (giftClickCount >= 2) {
+            } else if (giftClickCount >= 5) {
                 agentMessage.innerHTML = "Il n'y a certes pas de cadeau physique (un jour peut être). Mais au moins je suis là pour toi si besoin y est ( le tarif est de 200dh/h). <span id='inlineHeart' class='text-red-500 text-2xl cursor-pointer animate-pulse'>&hearts;</span>";
                 giftButton.style.display = 'none'; // Hide the button after the final message
                 
